fix: fixed overflow bug for friendlist and chat area

--- a/src/chat.css
+++ b/src/chat.css
@@ -1,7 +1,10 @@
+
+
 body {
     background-color: #050414;
     color: #ffffff !important;
 }
+
 .nav-column {
     background-color: #050414;
     width: 60px;
@@ -33,9 +36,22 @@ body {
 }
 
 .friend-list {
-    background-color: #0d0b29;
+    background-color: #100d2c;
     height: 100vh;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.friend-list-container {
+    flex-grow: 1;
     overflow-y: auto;
+    margin-right: 5px;
+    transition: all 0;
+}
+
+#chatlist {
+    height: 100%;
 }
 
 h5 {
@@ -47,7 +63,7 @@ h5 {
 }
 
 .friend-item {
-    transition: background-color 0.3s ease;
+    transition: background-color 0.1s ease;
     cursor: pointer;
 }
 
@@ -64,7 +80,7 @@ h5 {
 }
 
 .chat-area {
-    background-color: #0a0821;
+    background-color: #0b0824;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -78,7 +94,9 @@ h5 {
 .chat-messages {
     flex-grow: 1;
     overflow-y: auto;
+    overflow-x: hidden;
     padding: 1rem;
+    margin-right: 5px;
 }
 
 .message {
@@ -87,6 +105,7 @@ h5 {
     border-radius: 1rem;
     max-width: 80%;
     clear: both;
+    word-break: break-word;
 }
 
 .message-time {
